Fix issue 46
